# book_translation

./: .gitignore  AGENTS.md  README.md  project.json  pyproject.toml
books/diablo-the-kingdom-of-shadow/: project.json
books/diablo-the-kingdom-of-shadow/context/: approved_terminology.json  book_metadata.json  chapter_memory.md  characters.csv  decisions.md  glossary.csv  progress.md  project_brief.md  quality_exceptions.json  style_guide.md
books/diablo-the-kingdom-of-shadow/prompts/: adjudicate.md  book_audit.md  finalize.md  metadata.md  terminology.md  translate.md
context/: chapter_memory.md  characters.csv  decisions.md  glossary.csv  progress.md  project_brief.md  style_guide.md
prompts/: review.md  terminology_consolidate.md
tests/: test_notion_sync.py  test_orchestrator.py  test_pipeline.py  test_project.py  test_quality.py  test_runner.py  test_workers.py
translation_pipeline/: __init__.py  cli.py  notion_sync.py  orchestrator.py  project.py  quality.py  runner.py  workers.py
